# newall

./: .gitignore
study/: dividend.py  financial_statements.py  stock.py  stockquery.py
study/sub_pj/sql_app/: crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py
study/sub_pj/sql_app/tests/: test_sql_app.py
