[tool.poetry]
name = "sql_app"
version = "0.1.0"
description = ""
authors = ["gamgammoo2 <wjdgmldus21@naver.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
SQLAlchemy = "^2.0.19"
pymysql = "^1.1.0"
async_generator = "^1.10"
async-exit-stack = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
